fixed blurry background image

--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -3,6 +3,8 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    background-size: cover;
+    background-position:50% 50%;
 }
 
 .login-area {
